<resources>
    <string name="app_name">OrderFoodApp</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password"><i><u>Forgot password?</u></i> </string>
    <string name="enterprise_register"><i><u>Register here</u></i></string>
    <string name="current_location"><b>Current location</b></string>
    <string name="find_your_taste"><i>find your taste...</i></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="checkout"><b>Checkout</b></string>
    <string name="edit_profile"><b>Profile</b></string>
    <string name="order_history"><b>Order history</b></string>
    <string name="my_order"><b>My order</b></string>
    <string name="deliver_to"><b>Deliver to</b></string>
    <string name="coupon"><b>Coupon</b></string>
    <string name="delivery_method"><b>Delivery method</b></string>
    <string name="payment_method"><b>Payment method</b></string>
    <string name="total"><b>Total:</b></string>
    <string name="on_sale"><i>ON SALE NOW, HURRY UP!</i></string>
    <string name="comment_something"><i>Comment something...</i></string>
    <string name="about_us_text">
        Pizza University is our food delivery platform that makes getting great food from your favorite local restaurants as easy as requesting a ride.<br />
        Pizza University app connects you with a broad range of local restaurants and food, so you can order from the full menus of your local favorites whenever you want.<br />
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_something"><i>Type something…</i></string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="loading"><i>Please wait a minute, we are loading the newest food to bring the best experience to you</i></string>
    <string name="current_balance">Current Balance</string>
    <string name="current_balance_value"><b>$10000</b></string>
    <string name="add_new_method">Add new method</string>
    <string name="plus">+</string>
    <string name="fill_info"><b>Fill your information</b></string>
    <string name="name_info">Name</string>
    <string name="address_info">Address</string>
    <string name="phone_info">Phone number</string>
    <string name="gender_info">Gender</string>
    <string name="confirm_action">Confirm</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="facebook_app_id">498967178650384</string>
    <string name="fb_login_protocol_scheme">fb498967178650384</string>
    <string name="facebook_client_token">d410a8bc5bd93a030a5eb49631ade6b3</string>
    <string name="new_s_title">New\'s title</string>
    <string name="about_us">About us</string>
    <string name="profile">Profile</string>
    <string name="profile_name">George William</string>
    <string name="profile_email">geogrewilliam@gmail.com</string>
    <string name="log_out">Log out</string>
    <string name="reset_password">Reset password</string>
    <string name="name_app">Pizza University</string>
</resources>